css/about/about.css
/*-----section hello-----*/
.hello{
    height: fit-content;
    width: calc(100% - 200px);
    padding: 30px 100px;
}

.hello-container{
    height: fit-content;
    width: 100%;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    gap: 50px;
}

.text-container{
    display: flex;
    flex-direction: column;
    height: 385px;
    max-width: 400px;
    justify-content: left;
    order: 1;
}

.text-container > p:first-of-type{
    margin: 120px 0 10px 0;
}

.text-container > p:nth-of-type(2){
    color: var(--active-color-nav-bar);
}

.text-container > p:nth-of-type(3){
    color: var(--active-color-nav-bar);
    margin: 20px 0 51px 0;
}

.button-hello{
    height: 60px;
    width: 200px;
    background-color: #8643DC;
    border-radius: 100px;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
}

.button-hello p{
    color: #FFFFFF;
    margin: 0;
}

.hello-container img{
    height: 620px;
    width: 525px;
    max-width: 525px;
    order: 2;
}

@media(max-width: 1130px){
    .hello-container{
        flex-direction: column;
        align-items: center;
    }

    .text-container{
        height: 265px;
    }

    .text-container > p:first-of-type{
        margin-top: 0;
    }

    .text-container{
        order: 2;
    }

    .hello-container img{
        order: 1;
    }
}

@media(max-width: 767px){
    .hello{
        width: 100%;
        padding: 30px 0;
    }

    .hello-container img{
        height: 360px;
        width: 300px;
    }

    .text-container > p:nth-of-type(2){
        font-size: 48px;
    }
}

/*---modal windows---*/
.modal{
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 100vh;
    z-index: 99998;
    background-color: rgba(0, 0, 0, .8);
    display: flex;
    justify-content: center;
    align-items: center;
    visibility: hidden;
    opacity: 0;
    transition: all 2s;
}

.modal-box{
    position: relative;
    width: 320px;
    height: 245px;
    border-radius: 30px;
    z-index: 1;
    background-color: #8643DC;
    box-shadow: 0px 0px 17px -7px rgba(34, 60, 89, 0.2);
    display: flex;
    flex-direction: column;
    align-items: center;
}

.modal.show{
    visibility: visible;
    opacity: 1;
    overflow: hidden;
}

.modal-box p:first-child{
    text-align: center;
    margin-top: 20px;
}

.modal-box p:nth-of-type(2){
    text-align: center;
    max-width: 260px;
}

.modal-box-underline{
    height: 2px;
    width: 260px;
    background-color: #FFFFFF;
    margin: 5px 0;
}

.closer{
    position: absolute;
    left: 280px;
    top: 20px;
    height: 20px;
    width: 20px;
    display: flex;
    cursor: pointer;
}

.closer-line{
    position: absolute;
    transform: rotate(45deg);
    width: 2px;
    height: 15px;
    background-color: #25202F;
    margin: 0 10px;
}

.closer-line:last-of-type{
    transform: rotate(-45deg);
}    
/*-----section hello-----*/

/*-----section portfolio------*/
.portfolio{
    height: fit-content;
    width: calc(100% - 200px);
    padding: 50px 100px;
}

.portfolio-container{
    height: fit-content;
    width: 100%;;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.portfolio-text-box{
    height: 160px;
    width: 100%;
    display: flex;
    flex-wrap: 1;
    align-items: center;
    justify-content: space-between;
}

.portfolio-main-text-box{
    display: flex;
    flex-direction: column;
}

.portfolio-main-text-box > p:nth-child(1){
    color: #8643DC;
    letter-spacing: 1px;
    margin-top: 4px;
}

.portfolio-main-text-box > p:nth-child(3){
    color: var(--main-black);
    margin-bottom: 13px;
    max-width: 205px;
    letter-spacing: 1.2px;
    line-height: 48px;
}

.containers-basic-line-under-text{
    height: 2px;
    width: 50px;
    background-color: #8643DC;
    margin: 10px 0 15px 0;
}

.portfolio-explore{
    display: flex;
    height: fit-content;
    width: 170px;
    align-items: center;
    justify-content: space-between;
}

.portfolio-explore p:first-child{
    color: var(--main-black);
    font-weight: 800;
    border-bottom: 1px solid var(--main-black);
    padding-bottom: 1px;
}

.portfolio-card{
    width: 100%;
}

